==> terjeio/grblHAL/drivers/ESP32/wifi.c <==
#include "driver.h"
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include "esp_log.h"
#include "esp_wifi.h"
#include "esp_event_loop.h"
#include "nvs_flash.h"
#include "networking/networking.h"
#include "networking/utils.h"
#include "wifi.h"
#include "dns_server.h"
#include "web/backend.h"
#include "grbl/report.h"
#include "grbl/nvs_buffer.h"

char *wifi_get_mac (void)
{
    static char mac[18];
    uint8_t bmac[6];

    esp_wifi_get_mac(ESP_IF_WIFI_STA, bmac);
    sprintf(mac, "%02X:%02X:%02X:%02X:%02X:%02X", bmac[0], bmac[1], bmac[2], bmac[3], bmac[4], bmac[5]);

    return mac;
}

static void start_services (void)
{
#if TELNET_ENABLE
    if(network.services.telnet && !services.telnet) {
        TCPStreamInit();
        TCPStreamListen(network.telnet_port == 0 ? 23 : network.telnet_port);
        services.telnet = On;
        sys_timeout(STREAM_POLL_INTERVAL, lwIPHostTimerHandler, NULL);
    }
#endif
#if WEBSOCKET_ENABLE
    if(network.services.websocket && !services.websocket) {
        WsStreamInit();
        WsStreamListen(network.websocket_port == 0 ? 80 : network.websocket_port);
        services.websocket = On;
        sys_timeout(STREAM_POLL_INTERVAL, lwIPHostTimerHandler, NULL);
    }
#endif
#if HTTP_ENABLE
    if(network.services.http && !services.http)
        services.http = httpdaemon_start(&network);
#endif
}

static void stop_services (void)
{
#if HTTP_ENABLE
    if(services.http)
        httpdaemon_stop();
#endif
#if TELNET_ENABLE
    if(services.telnet)
        TCPStreamClose();
#endif
#if WEBSOCKET_ENABLE
    if(services.websocket)
        WsStreamClose();
#endif
    if(services.dns)
        dns_server_stop();

    services.mask = 0;
}

static void wifi_ap_scan (void)
{
    // https://esp32.com/viewtopic.php?t=5536
    // https://esp32.com/viewtopic.php?t=7305

    static const wifi_scan_config_t scan_config = {
        .ssid = 0,
        .bssid = 0,
        .channel = 0,
        .scan_time.active = {
          .min = 500,
          .max = 1500
        },
        .scan_type = WIFI_SCAN_TYPE_ACTIVE,
        .show_hidden = false
    };

    if(esp_wifi_scan_start(&scan_config, false) == ESP_OK)
        xEventGroupSetBits(wifi_event_group, SCANNING_BIT);
}

bool wifi_start (void)
{
    wifi_mode_t currentMode;

    if(nvs_address == 0)
        return false;

#if !WIFI_SOFTAP
    if(wifi.mode == WiFiMode_APSTA) // Reset to default
        wifi.mode = WIFI_MODE;
#endif

    if(esp_wifi_get_mode(&currentMode) == ESP_ERR_WIFI_NOT_INIT) {

        tcpip_adapter_init();

        wifi_event_group = xEventGroupCreate();
        aplist_mutex = xSemaphoreCreateMutex();

        // TODO: add error messages on fail?

        if(esp_event_loop_init(wifi_event_handler, NULL) != ESP_OK)
            return false;

        wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();

        if(esp_wifi_init(&cfg) != ESP_OK)
            return false;

        if(esp_wifi_set_storage(WIFI_STORAGE_RAM) != ESP_OK)
            return false;

        if(esp_wifi_set_mode(WIFI_MODE_NULL) != ESP_OK)
            return false;
    }

    wifi_config_t wifi_config;

    if(currentMode != settingToMode(wifi.mode) && (wifi.mode == WiFiMode_AP || wifi.mode == WiFiMode_APSTA)) {

        tcpip_adapter_dhcps_stop(TCPIP_ADAPTER_IF_AP);

        wifi.ap.network.ip_mode = IpMode_Static; // Only mode supported

        init_adapter(TCPIP_ADAPTER_IF_AP, &wifi.ap.network);

        tcpip_adapter_dhcps_start(TCPIP_ADAPTER_IF_AP);

        memset(&wifi_config, 0, sizeof(wifi_config));

        if(wifi.ap.ssid[0] == '\0')
            return false;

        if(strlcpy((char *)wifi_config.ap.ssid, wifi.ap.ssid, sizeof(wifi_config.ap.ssid)) >= sizeof(wifi_config.ap.ssid))
            return false;

        if (strlen(wifi.ap.password) == 0)
            wifi_config.ap.authmode = WIFI_AUTH_OPEN;
        else if(strlcpy((char *)wifi_config.ap.password, wifi.ap.password, sizeof(wifi_config.ap.password)) < sizeof(wifi_config.ap.password))
            wifi_config.ap.authmode = WIFI_AUTH_WPA_WPA2_PSK;
        else
            return false;

        wifi_config.ap.max_connection = 1;

        if(esp_wifi_set_mode(settingToMode(wifi.mode)) != ESP_OK)
            return false;

        if(esp_wifi_set_config(ESP_IF_WIFI_AP, &wifi_config) != ESP_OK)
            return false;

        if(wifi.mode == WiFiMode_APSTA)
            xEventGroupSetBits(wifi_event_group, APSTA_BIT);

//      ESP_LOGI(TAG, "WIFI AP SSID:[%s] password:[%s]\n", wifi_config.ap.ssid, wifi_config.ap.password);
    }

    if(currentMode != settingToMode(wifi.mode) && (wifi.mode == WiFiMode_STA || wifi.mode == WiFiMode_APSTA)) {

        tcpip_adapter_dhcpc_stop(TCPIP_ADAPTER_IF_STA);
    
        wifi.sta.network.ip_mode = IpMode_DHCP; // For now...

        if(init_adapter(TCPIP_ADAPTER_IF_STA, &wifi.sta.network))
            tcpip_adapter_dhcpc_start(TCPIP_ADAPTER_IF_STA);

        memset(&wifi_sta_config, 0, sizeof(wifi_config));

        if(wifi.sta.ssid[0] != '\0') {

            if(strlcpy((char *)wifi_sta_config.sta.ssid, wifi.sta.ssid, sizeof(wifi_sta_config.sta.ssid)) >= sizeof(wifi_sta_config.sta.ssid))
                return false;

            if(strlcpy((char *)wifi_sta_config.sta.password, wifi.sta.password, sizeof(wifi_sta_config.sta.password)) >= sizeof(wifi_sta_config.sta.password))
                return false;
        }

        if(esp_wifi_set_mode(settingToMode(wifi.mode)) != ESP_OK)
            return false;

        if(esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_sta_config) != ESP_OK)
            return false;

//      ESP_LOGI(TAG, "WIFI STA SSID:[%s] password:[%s]\n", wifi_sta_config.sta.ssid, wifi_sta_config.sta.password);
    }

    if(esp_wifi_start() != ESP_OK)
        return false;

    if(wifi.mode == WiFiMode_AP ||wifi.mode == WiFiMode_APSTA)
        tcpip_adapter_set_hostname(TCPIP_ADAPTER_IF_AP, wifi.ap.network.hostname);

    if(wifi.mode == WiFiMode_STA ||wifi.mode == WiFiMode_APSTA)
        tcpip_adapter_set_hostname(TCPIP_ADAPTER_IF_STA, wifi.sta.network.hostname);

    if(wifi.mode == WiFiMode_APSTA)
        wifi_ap_scan();

    return true;
}

bool wifi_stop (void)
{
    stop_services();

    esp_wifi_stop();

    return true;
}

static status_code_t wifi_set_int (setting_id_t setting, uint_fast16_t value)
{
    switch(setting) {

        case Setting_NetworkServices:
            {
                network_services_t is_available = {0};
        #if TELNET_ENABLE
                is_available.telnet = On;
        #endif
        #if HTTP_ENABLE
                is_available.http = On;
        #endif
        #if WEBSOCKET_ENABLE
                is_available.websocket = On;
        #endif
                wifi.sta.network.services.mask =
                 wifi.ap.network.services.mask = (uint8_t)value & is_available.mask;
                // TODO: fault if attempt to select services not available?
            }
            break;

#if TELNET_ENABLE
        case Setting_TelnetPort:
            wifi.sta.network.telnet_port = wifi.ap.network.telnet_port = (uint16_t)value;
            break;
#endif

#if HTTP_ENABLE
        case Setting_HttpPort:
            wifi.sta.network.http_port = wifi.ap.network.http_port = (uint16_t)value;
            break;
#endif

#if WEBSOCKET_ENABLE
        case Setting_WebSocketPort:
            wifi.sta.network.websocket_port = wifi.ap.network.websocket_port = (uint16_t)value;
            break;
#endif
        default:
            break;
    }

    return Status_OK;
}

static uint_fast16_t wifi_get_int (setting_id_t setting)
{
    uint_fast16_t value = 0;

    switch(setting) {

        case Setting_NetworkServices:
            value = wifi.sta.network.services.mask;
            break;

#if TELNET_ENABLE
        case Setting_TelnetPort:
            value = wifi.sta.network.telnet_port;
            break;
#endif

#if HTTP_ENABLE
        case Setting_HttpPort:
            value = wifi.sta.network.http_port;
            break;
#endif

#if WEBSOCKET_ENABLE
        case Setting_WebSocketPort:
            value = wifi.sta.network.websocket_port;
            break;
#endif
        default:
            break;
    }

    return value;
}

static status_code_t wifi_set_ip (setting_id_t setting, char *value)
{
    ip4_addr_t addr;

    if(inet_pton(AF_INET, value, &addr) != 1)
        return Status_InvalidStatement;

    status_code_t status = Status_OK;

    switch(setting) {

        case Setting_IpAddress:
            set_addr(wifi.sta.network.ip, &addr);
            break;

        case Setting_Gateway:
            set_addr(wifi.sta.network.gateway, &addr);
            break;

        case Setting_NetMask:
            set_addr(wifi.sta.network.mask, &addr);
            break;

#if WIFI_SOFTAP

        case Setting_IpAddress2:
            set_addr(wifi.ap.network.ip, &addr);
            break;

        case Setting_Gateway2:
            set_addr(wifi.ap.network.gateway, &addr);
            break;

        case Setting_NetMask2:
            set_addr(wifi.ap.network.mask, &addr);
            break;

#endif

        default:
            status = Status_Unhandled;
            break;
    }

    return status;
}

static char *wifi_get_ip (setting_id_t setting)
{
    static char ip[INET6_ADDRSTRLEN];

    switch(setting) {

        case Setting_IpAddress:
            inet_ntop(AF_INET, &wifi.sta.network.ip, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_Gateway:
            inet_ntop(AF_INET, &wifi.sta.network.gateway, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_NetMask:
            inet_ntop(AF_INET, &wifi.sta.network.mask, ip, INET6_ADDRSTRLEN);
            break;

#if WIFI_SOFTAP

        case Setting_IpAddress2:
            inet_ntop(AF_INET, &wifi.ap.network.ip, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_Gateway2:
            inet_ntop(AF_INET, &wifi.ap.network.gateway, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_NetMask2:
            inet_ntop(AF_INET, &wifi.ap.network.mask, ip, INET6_ADDRSTRLEN);
            break;

            #endif

        default:
            *ip = '\0';
            break;
    }

    return ip;
}

static void wifi_settings_restore (void)
{
    ip4_addr_t addr;

    memset(&wifi, 0, sizeof(wifi_settings_t));

    wifi.mode = WIFI_MODE;

// Station

    strlcpy(wifi.sta.network.hostname, NETWORK_HOSTNAME, sizeof(wifi.sta.network.hostname));

    wifi.sta.network.ip_mode = (ip_mode_t)NETWORK_IPMODE;

    if(inet_pton(AF_INET, NETWORK_IP, &addr) == 1)
        set_addr(wifi.sta.network.ip, &addr);

    if(inet_pton(AF_INET, NETWORK_GATEWAY, &addr) == 1)
        set_addr(wifi.sta.network.gateway, &addr);

#if NETWORK_IPMODE == 0
    if(inet_pton(AF_INET, NETWORK_MASK, &addr) == 1)
        set_addr(wifi.sta.network.mask, &addr);
 #else
    if(inet_pton(AF_INET, "255.255.255.0", &addr) == 1)
        set_addr(wifi.sta.network.mask, &addr);
#endif

// Access Point

#if WIFI_SOFTAP

    wifi.ap.network.ip_mode = IpMode_Static;
    strlcpy(wifi.ap.network.hostname, NETWORK_AP_HOSTNAME, sizeof(wifi.ap.network.hostname));
    strlcpy(wifi.ap.ssid, WIFI_AP_SSID, sizeof(wifi.ap.ssid));
    strlcpy(wifi.ap.password, WIFI_AP_PASSWORD, sizeof(wifi.ap.password));

    if(inet_pton(AF_INET, NETWORK_AP_IP, &addr) == 1)
        set_addr(wifi.ap.network.ip, &addr);

    if(inet_pton(AF_INET, NETWORK_AP_GATEWAY, &addr) == 1)
        set_addr(wifi.ap.network.gateway, &addr);

    if(inet_pton(AF_INET, NETWORK_AP_MASK, &addr) == 1)
        set_addr(wifi.ap.network.mask, &addr);

#endif

// Common

    wifi.sta.network.services.mask =
    wifi.ap.network.services.mask = 0;
    wifi.sta.network.telnet_port =
    wifi.ap.network.telnet_port = NETWORK_TELNET_PORT;
    wifi.sta.network.http_port =
    wifi.ap.network.http_port = NETWORK_HTTP_PORT;
    wifi.sta.network.websocket_port =
    wifi.ap.network.websocket_port = NETWORK_WEBSOCKET_PORT;

#if TELNET_ENABLE
    wifi.sta.network.services.telnet =
    wifi.ap.network.services.telnet = On;
#endif

#if HTTP_ENABLE
    wifi.sta.network.services.http =
    wifi.ap.network.services.http = On;
#endif

#if WEBSOCKET_ENABLE
    wifi.sta.network.services.websocket =
    wifi.ap.network.services.websocket = On;
#endif

    hal.nvs.memcpy_to_nvs(nvs_address, (uint8_t *)&wifi, sizeof(wifi_settings_t), true);
}
